--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -47,6 +47,7 @@
     <string name="syncErrorHeader">エラー</string>
     <string name="syncFileActionCopy">コピー中：%s</string>
     <string name="syncFileActionDelete">削除中：%s</string>
+    <string name="syncFileActionReSync">再同期中 : %s</string>
     <string name="syncDeleteConfirm1">確認：デバイスから1個のファイルを削除しますか？</string>
     <string name="syncDeleteConfirm9">確認：デバイスから%d個のファイルを削除しますか？</string>
     <string name="syncCompleted">MusicBeeとの同期は正常終了しました</string>
@@ -80,6 +81,5 @@
     <string name="menuWifiFullSync">完全同期</string>
     <string name="menuWifiPlaylistSync">プレイリスト同期</string>
     <string name="errorInvalidIp">This is not a valid IP address</string>
-    <string name="already_permission">You should already have permission!</string>
     <!-- Strings used for fragments for navigation -->
 </resources>
