--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -81,5 +81,7 @@
     <string name="menuWifiFullSync">Sincronização Total</string>
     <string name="menuWifiPlaylistSync">Sincronização de Playlists</string>
     <string name="settingsLocateServerInfo4">Passo 3. (Opcional) Defina o IP do PC executando MusicBee se detecção automática falhar:</string>
+    <string name="statsSelect">Select Stats</string>
+    <string name="statsSelectMessage">Select GoneMAD\'s stats.xml file.</string>
     <string name="errorInvalidIp">Este não é um endereço IP válido</string>
 </resources>
