--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -90,5 +90,8 @@
     <string name="progressDialogTitle">MusicBee Wifi Sync</string>
     <string name="alertDialogMessage">Register files modified by Wired Sync in the MediaStore</string>
     <string name="progressDialogMessage">Registering files modified by Wired Sync in the MediaStore…</string>
+    <string name="menuAllPlaylitsDelete">Delete All Playlists in Device</string>
+    <string name="menuAllPlaylitsDeleteConfirm">Really want to delete all playlists?</string>
+    <string name="playlistDeletingMessage">Deleting playlists...</string>
 
 </resources>
