--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -92,6 +92,6 @@
     <string name="progressDialogMessage">Registering files modified by Wired Sync in the MediaStore…</string>
     <string name="menuAllPlaylitsDelete">Delete All Playlists in Device</string>
     <string name="menuAllPlaylitsDeleteConfirm">Really want to delete all playlists?</string>
-    <string name="playlistDeletingMessage">Deleting playlists...</string>
+    <string name="playlistDeletingMessage">Deleting playlists…</string>
 
 </resources>
