--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,7 +91,8 @@
     <string name="progressDialogMessage">Registering files modified by Wired Sync in the MediaStore…</string>
     <string name="menuAllPlaylitsDelete">Delete All Playlists in Device</string>
     <string name="menuAllPlaylitsDeleteConfirm">Do you really want to delete all playlists?</string>
-    <string name="playlistDeletingMessage">Deleting playlists...</string>
+    <string name="playlistDeletingMessage">Deleting playlists…</string>
+    <string name="textview">TextView</string>
 
     playlistDeletingMessage
     <!-- Strings used for fragments for navigation -->
